--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,14 @@
 .point-cluster {
   position: absolute;
-  padding: 10px;
-  background-color: red;
+  color: #fff;
   z-index: 2000;
+  font-family: Helvetica, Verdana, Arial, sans-serif;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 11px;
+}
+.point-cluster.medium {
+  background: url('http://images-static.moxiworks.com/static/images/br/clusterMedium.png');
 }
