--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,12 @@
   line-height: 50px;
   font-size: 11px;
 }
+.point-cluster.large {
+  background: url('http://images-static.moxiworks.com/static/images/br/clusterLarge.png');
+}
 .point-cluster.medium {
   background: url('http://images-static.moxiworks.com/static/images/br/clusterMedium.png');
+}
+.point-cluster.small {
+  background: url('http://images-static.moxiworks.com/static/images/br/clusterSmall.png');
 }
