Changing the example to have over 7000 points.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
   text-align: center;
   line-height: 50px;
   font-size: 11px;
+  cursor: pointer;
 }
 .point-cluster.large {
   background: url('http://images-static.moxiworks.com/static/images/br/clusterLarge.png');
