Fixing the google custom overlay to make sure the draw method always places the overlay in the top left position of the map to assure that locations are correct.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,3 +19,7 @@
 .point-cluster.small {
   background: url('http://images-static.moxiworks.com/static/images/br/clusterSmall.png');
 }
+
+#point_cluster_overlay {
+  position: absolute;
+}
