--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,18 +6,26 @@
   width: 50px;
   height: 50px;
   text-align: center;
-  line-height: 50px;
   font-size: 11px;
   cursor: pointer;
 }
 .point-cluster.large {
-  background: url('http://images-static.moxiworks.com/static/images/br/clusterLarge.png');
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 50px;
 }
 .point-cluster.medium {
-  background: url('http://images-static.moxiworks.com/static/images/br/clusterMedium.png');
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 40px;
 }
 .point-cluster.small {
-  background: url('http://images-static.moxiworks.com/static/images/br/clusterSmall.png');
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 30px;
 }
 #point_cluster_overlay {
   position: absolute;
