--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,3 +30,14 @@
 #point_cluster_overlay {
   position: absolute;
 }
+
+.marker-point {
+  box-sizing: border-box;
+  background: #0f2b5b;
+  box-shadow: 0 0 5px 1px #ccc;
+  border: 2px solid #FFF;
+  height: 16px;
+  width: 16px;
+  border-radius: 16px;
+  cursor: pointer;
+}
