Initial implementaton of the popper info mouseover.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,5 @@
 $normal-pin-size: 16px;
 $hidden-pin-size: 4px;
-
 .point-cluster {
   position: absolute;
   color: #fff;
@@ -33,7 +32,6 @@ $hidden-pin-size: 4px;
 #point_cluster_overlay {
   position: absolute;
 }
-
 .marker-point {
   box-sizing: border-box;
   background: #0f2b5b;
@@ -44,10 +42,69 @@ $hidden-pin-size: 4px;
   border-radius: 16px;
   cursor: pointer;
 }
-
 .fadePins {
-  border: 0px solid #FFF;
+  border: 0 solid #FFF;
   height: $hidden-pin-size;
   width: $hidden-pin-size;
   border-radius: $hidden-pin-size;
+}
+.popper {
+  position: absolute;
+  background: #FFC107;
+  color: black;
+  border-radius: 3px;
+  box-shadow: 0 0 2px rgba(0,0,0,0.5);
+  padding: 10px;
+  text-align: center;
+}
+.popper .popper__arrow {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  position: absolute;
+  margin: 5px;
+}
+.popper[x-placement^="top"] {
+  margin-bottom: 5px;
+}
+.popper[x-placement^="top"] .popper__arrow {
+  border-width: 5px 5px 0 5px;
+  border-color: #FFC107 transparent transparent transparent;
+  bottom: -5px;
+  left: calc(50% - 5px);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.popper[x-placement^="bottom"] {
+  margin-top: 5px;
+}
+.popper[x-placement^="bottom"] .popper__arrow {
+  border-width: 0 5px 5px 5px;
+  border-color: transparent transparent #FFC107 transparent;
+  top: -5px;
+  left: calc(50% - 5px);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.popper[x-placement^="right"] {
+  margin-left: 5px;
+}
+.popper[x-placement^="right"] .popper__arrow {
+  border-width: 5px 5px 5px 0;
+  border-color: transparent #FFC107 transparent transparent;
+  left: -5px;
+  top: calc(50% - 5px);
+  margin-left: 0;
+  margin-right: 0;
+}
+.popper[x-placement^="left"] {
+  margin-right: 5px;
+}
+.popper[x-placement^="left"] .popper__arrow {
+  border-width: 5px 0 5px 5px;
+  border-color: transparent transparent transparent #FFC107;
+  right: -5px;
+  top: calc(50% - 5px);
+  margin-left: 0;
+  margin-right: 0;
 }
