Adding hover classes.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -48,6 +48,12 @@ $hidden-pin-size: 4px;
   width: $hidden-pin-size;
   border-radius: $hidden-pin-size;
 }
+.PointHoverState {
+  -webkit-box-shadow: 0 0 5px 20px rgba(146, 155, 168, 0.3);
+  box-shadow: 0 0 5px 20px rgba(146, 155, 168, 0.3);
+  background: #6f809d;
+  cursor: pointer;
+}
 .popper {
   position: absolute;
   background: #fff;
