--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -52,7 +52,7 @@ $hidden-pin-size: 4px;
 .PointHoverState {
   -webkit-box-shadow: 0 0 5px 20px rgba(146, 155, 168, 0.3);
   box-shadow: 0 0 5px 20px rgba(146, 155, 168, 0.3);
-  background: #6f809d;
+  background: red;
   cursor: pointer;
 }
 
